--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,8 @@
 @import './vars';
 @import './animations';
+@import './404';
+@import './services';
+@import './aboutus';
 
 *,
 *::after,
@@ -50,7 +53,6 @@ body {
 }
 
 // @@@@@@@@@@@@@     TOPBAR     @@@@@@@@@@@@@@@
-
 .topbar {
 	position: fixed;
 	padding: 0.6rem;
@@ -84,8 +86,6 @@ body {
 		color: $main-color;
 	}
 }
-
-// @@@@@@@@@@@@@     NAWIGACJA MOBILNA     @@@@@@@@@@@@@@@
 
 .nav {
 	position: fixed;
@@ -219,8 +219,6 @@ body {
 	display: none;
 }
 
-// @@@@@@@@@@@@@     HERO IMG     @@@@@@@@@@@@@@@
-
 .header {
 	height: 100vh;
 	overflow: hidden;
@@ -296,8 +294,6 @@ body {
 	}
 }
 
-// @@@@@@@@@@@@@     INFO     @@@@@@@@@@@@@@@
-
 .info {
 	background-color: $pure-white;
 	margin: 2.5rem 0;
@@ -345,8 +341,6 @@ body {
 .section-title--two {
 	margin-top: 3.1rem;
 }
-
-// @@@@@@@@@@@@@     NEWS     @@@@@@@@@@@@@@@
 
 .news {
 	background-image: $light-blue-gradient;
@@ -434,8 +428,6 @@ body {
 		}
 	}
 }
-
-// @@@@@@@@@@@@@     MORE INFO     @@@@@@@@@@@@@@@
 
 .more-info {
 	background-color: $pure-white;
@@ -617,8 +609,6 @@ body {
 	}
 }
 
-// @@@@@@@@@@@@@     CONTACT     @@@@@@@@@@@@@@@
-
 .contact {
 	background-image: $blue-gradient;
 	color: $pure-white;
@@ -689,8 +679,6 @@ body {
 	}
 }
 
-// @@@@@@@@@@@@@     Footer     @@@@@@@@@@@@@@@
-
 .footer {
 	background-color: $secondary-color;
 	color: $primary-color;
@@ -722,494 +710,6 @@ body {
 	&__text {
 		text-align: center;
 		margin-top: 1.3rem;
-	}
-}
-
-// @@@@@@@@@@@@@     PODSTRONA 404    @@@@@@@@@@@@@@@
-
-.err-body {
-	height: 100vh;
-	position: relative;
-}
-
-.err-nav {
-	top: 0;
-}
-
-.error-page {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	height: 100vh;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.error-img {
-	width: 70%;
-	max-width: 300px;
-	position: relative;
-	top: 5%;
-	margin-bottom: 2rem;
-}
-
-.error-content {
-	margin-top: 1.3rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.error-ops {
-	margin: 0.6rem 0;
-	font-size: $font-size-20px;
-	color: $main-color;
-}
-
-.error-title {
-	padding: 0.6rem 1.3rem;
-	text-align: center;
-	font-size: $font-size-16px;
-}
-
-.error-btn {
-	padding: 0.6rem 1.3rem;
-	margin-top: 0.6rem;
-	background-color: transparent;
-	border: 3px solid $main-color;
-	font-size: $font-size-16px;
-	text-decoration: none;
-	color: $main-color;
-	font-weight: bold;
-	border-radius: 8px;
-	transition: background-color 0.4s, color 0.4s;
-	&:hover {
-		color: $pure-white;
-		background-color: $main-color;
-	}
-}
-
-.error-footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	text-align: center;
-	padding: 1.3rem;
-	background-color: $secondary-color;
-	color: $pure-white;
-	width: 100%;
-	margin-bottom: 0;
-}
-
-// @@@@@@@@@@@@@     PODSTRONA SERVICES    @@@@@@@@@@@@@@@
-.services {
-	h2 {
-		margin-top: 1.3rem;
-	}
-}
-
-.services-header {
-	height: 80vh;
-	.header__img {
-		background-image: url('../img/servicesHeroMini.jpg');
-		background-position: 28%;
-	}
-}
-
-.services__boxes {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.services__box {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	width: 100%;
-	height: 26rem;
-	color: $pure-white;
-	padding: 1.3rem;
-	background-image: $light-blue-gradient;
-	margin: 1.3rem 0;
-	border-radius: 8px;
-	&:nth-child(3n + 1) {
-		background-image: $purple-gradient;
-	}
-	&:nth-child(3n + 2) {
-		background-image: $blue-gradient;
-	}
-
-	i {
-		font-size: 3rem;
-		position: absolute;
-		top: 1.6rem;
-		right: 1.6rem;
-	}
-
-	.services__title {
-		text-transform: uppercase;
-		font-size: 1.4rem;
-		margin: 5rem 0 1.9rem;
-		text-align: center;
-	}
-
-	.services__text {
-		font-size: $font-size-16px;
-	}
-}
-
-// @@@@@@@@@@@@@     PODSTRONA ABOUTUS    @@@@@@@@@@@@@@@
-
-.aboutus-header {
-	height: 80vh;
-	.header__img {
-		background-image: url('../img/aboutusHeroMini.jpg');
-		background-position: 64%;
-	}
-}
-
-.aboutus__firm {
-	h2 {
-		margin-top: 1.3rem;
-	}
-
-	&-box {
-		margin-top: 0.6rem;
-		padding: 0.6rem;
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	&--text {
-		font-weight: 300;
-		&-title {
-			margin: 1.3rem 0;
-			font-size: $font-size-19px;
-			font-weight: bold;
-			color: $complementary-color;
-		}
-
-		&-content {
-			font-size: $font-size-16px;
-			span {
-				font-weight: bold;
-			}
-		}
-	}
-
-	img {
-		display: none;
-	}
-}
-
-.aboutus__details {
-	background-image: $light-blue-gradient;
-
-	h2 {
-		margin-top: 1.3rem;
-		color: $pure-white;
-	}
-
-	.underline {
-		background-color: $complementary-color;
-	}
-
-	&-boxes {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-	}
-
-	&-ref {
-		width: 100%;
-	}
-
-	&-gallery {
-		display: flex;
-		padding: 1.3rem;
-		justify-content: space-evenly;
-		align-items: center;
-		flex-wrap: wrap;
-		max-width: 1200px;
-		margin: 1.3rem 0;
-		border-radius: 8px;
-		background: linear-gradient(60deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.5));
-		list-style-type: none;
-
-		&-img {
-			margin: 1.3rem;
-			max-height: 22rem;
-			max-width: 16rem;
-			width: 100%;
-			height: 100%;
-			transform: scale(1);
-			transition: transform 0.3s;
-			cursor: pointer;
-			border-radius: 8px;
-			box-shadow: 0 0 30px 2px rgba(0, 0, 0, 0.5);
-			object-fit: cover;
-			overflow: hidden;
-			&:hover {
-				transform: scale(1.1);
-			}
-		}
-	}
-
-	&-popup {
-		position: fixed;
-		height: 100vh;
-		width: 100vw;
-		left: 0;
-		top: 0;
-		display: flex;
-		align-content: center;
-		justify-content: center;
-		flex-wrap: wrap;
-		background: rgba(0, 0, 0, 0.5);
-		backdrop-filter: blur(8px);
-		animation: fadeIn 0.3s;
-		z-index: 1;
-		&.hidden {
-			display: none;
-		}
-		&.fade-out {
-			animation: fadeOut 0.3s both;
-		}
-		&--img {
-			position: absolute;
-			top: 58%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			max-height: 75%;
-			max-width: 75%;
-		}
-
-		&--close,
-		&--arrow {
-			position: absolute;
-			bottom: 3%;
-			font-size: $font-size-20px;
-			height: 3rem;
-			width: 3rem;
-			line-height: 3rem;
-			opacity: 0.5;
-			border-radius: 50%;
-			cursor: pointer;
-			border: none;
-			transition: opacity 0.3s;
-			&-prev {
-				left: 5%;
-			}
-
-			&-next {
-				right: 5%;
-			}
-		}
-
-		&--close:hover,
-		&--arrow:hover {
-			opacity: 1;
-		}
-	}
-}
-
-.aboutus__details-rel {
-	position: relative;
-	margin: 1.3rem 0;
-	width: 100%;
-	border-radius: 8px;
-	height: 400px;
-	overflow: hidden;
-	&-slider {
-		display: flex;
-		transform: translateX(0);
-		transition: transform 0.7s;
-	}
-
-	&-box {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		z-index: 0;
-		&.active {
-			display: block;
-		}
-	}
-
-	&-text {
-		position: absolute;
-		bottom: 10%;
-		left: 50%;
-		transform: translateX(-50%);
-		text-align: center;
-		color: $pure-white;
-		font-size: $font-size-20px;
-		width: 80%;
-	}
-
-	&-shadow {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		height: 30%;
-		background-color: rgba(0, 0, 0, 0.7);
-	}
-
-	&-img {
-		height: 400px;
-		margin: 0;
-		object-fit: cover;
-		width: 1200px;
-	}
-
-	&-btn {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-		padding: 0.5rem 1rem;
-		color: $pure-white;
-		background-color: rgba(0, 0, 0, 0.5);
-		font-size: $font-size-20px;
-		transition: transform 0.3s;
-		border: none;
-		cursor: pointer;
-		&--prev {
-			left: 0;
-		}
-
-		&--next {
-			right: 0;
-		}
-
-		&:hover {
-			transform: translateY(-50%) scale(1.2);
-		}
-	}
-}
-
-.aboutus__team {
-	h2 {
-		margin-top: 1.3rem;
-	}
-
-	&.section-padding {
-		padding: 1.9rem 0.9rem;
-	}
-
-	&-box {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		flex-direction: column;
-	}
-
-	&-content {
-		width: 100%;
-	}
-
-	&-allpeople {
-		margin-top: 2.5rem;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		color: $pure-white;
-	}
-
-	&-person {
-		width: 100%;
-		margin: 0.6rem;
-	}
-
-	&-button {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		flex-direction: column;
-		width: 100%;
-		padding: 1.3rem 0.6rem;
-		border-top-left-radius: 8px;
-		border-top-right-radius: 8px;
-		cursor: pointer;
-		border: none;
-		color: $pure-white;
-		font-size: $font-size-16px;
-		font-weight: bold;
-		transition: background-color 0.5s;
-		&.one {
-			background-image: $light-blue-gradient;
-		}
-		&.two {
-			background-image: $purple-gradient;
-		}
-		&.three {
-			background-image: $blue-gradient;
-		}
-		&:hover,
-		&:active {
-			background-color: #8b4a78;
-		}
-
-		.name {
-			margin-bottom: 0.6rem;
-			i {
-				margin-right: 0.2rem;
-			}
-		}
-	}
-
-	&-text {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		flex-direction: column;
-		color: $pure-white;
-		margin-bottom: 1.9rem;
-		font-size: $font-size-15px;
-		background-color: rgb(79, 109, 241);
-		border-bottom-left-radius: 8px;
-		border-bottom-right-radius: 8px;
-		overflow: hidden;
-		max-height: 0;
-		transition: max-height 0.5s, padding 0.5s;
-		text-align: center;
-		.fa-phone,
-		.fa-house,
-		.fa-envelope {
-			margin: 0.6rem;
-		}
-		a {
-			text-decoration: none;
-			color: $pure-white;
-			transition: color 0.3s;
-			&:hover {
-				color: #ddd;
-			}
-		}
-	}
-
-	&-openh {
-		margin: 1.3rem 0;
-		&-list {
-			list-style: none;
-			&-item {
-				font-size: $font-size-16px;
-				margin-top: 0.2rem;
-				text-align: center;
-			}
-		}
 	}
 }
 
